[project]
name = "llmping"
version = "0.1.0"
description = "Simple CLI to test LLM provider API keys"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv>=1.0.1",
    "requests>=2.32.0",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "langchain-mistralai>=0.1.0",
    "langchain-groq>=0.1.0",
    "langchain-openai>=0.3.0",
    "langgraph>=0.2.0",
]

[project.scripts]
llmping = "main:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["config", "main", "lanchainfunc"]

[tool.pytest.ini_options]
testpaths = ["tests"]
